# BuildURL

./: .all-contributorsrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codecov.yml  pre-commit.yml  python-package.yml  semantic-release.yml  upload-package.yml
buildurl/: __init__.py  builder.py
docs/: conf.py  index.rst  wordlist.txt
docs/source/: buildurl.rst  modules.rst
tests/: test_buildurl.py
